--- a/index.html
+++ b/index.html
@@ -8,38 +8,21 @@
     <script src="scripts/main.js" defer></script>
 </head>
 <body>
-    <div class="wrapper">
-        <h1>The gif machine</h1>
+    <div class="wrapper wrapper__main">
+        <h1>Who is that Pokémon ?</h1>
         <form action="">
             <div class="input-wrapper">
-                <div class="input-wrapper">
-                    <label for="search" class="label label--search">Search</label>
-                    <input type="text" name="search"    id="search"placeholder="Search your favorites gifs...">
-                    <label for=""></label>
-                </div>
-                <div class="input-wrapper search-wrapper">
-                    <select name="quantity" id="quantity">
-                        <option value="1" selected>1</option>
-                        <option value="2">2</option>
-                        <option value="3">3</option>
-                        <option value="4">4</option>
-                        <option value="5">5</option>
-                        <option value="6">6</option>
-                        <option value="7">7</option>
-                        <option value="8">8</option>
-                        <option value="9">9</option>
-                        <option value="10">10</option>
-                        <option value="15">15</option>
-                        <option value="25">25</option>
-                    </select>
-            </div>
+                <label for="search" class="label label--search">Search</label>
+                <input type="text" name="search"    id="search"placeholder="Search your favorite pokémon...">
+                <label for=""></label>
             </div>
             
-            <button class="btn">Search GIFS</button>
+            <button class="btn">Search Pokémon</button>
         </form>
 
-        <div class="wrapper wrapper__gif">
-        </div>
+        
+    </div>
+    <div class="wrapper wrapper__pokedex">
     </div>
 </body>
 </html>
